# svm

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  opencv_read_images
